# pdf_diff_gen

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: files.rs  main.rs  pdf.rs
