[package]
name = "pdf_diff_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
futures = "0.3.31"
humantime = "2.2.0"
image = "0.25.6"
pdfium-render = { version = "0.8.34", features = ["sync", "thread_safe"] }
rayon = "1.10.0"
tokio = { version = "1.46.1", features = ["full"] }
